# mmpose

./: .dockerignore  .gitignore  setup.py
mmpose/datasets/transforms/: converting.py
project/: Dockerfile  README.md  __init__.py  accuracy.py  create_env.ps1  create_env.sh  dataset_viewer.py  docker-compose.yaml  pipeline.py  pyproject.toml  requirements.txt  train.ps1  update_env.ps1
project/annotations/: .gitignore  comparison.py  converter.ps1  detection_labels.py  launch-label-studio.ps1  setup.sh  split.dvc  standard.dvc  tasks2json.py
project/annotations/benchmarks/: accuracy.py  comparison.py  config.py  eval-config.yaml  overlay.py
project/annotations/detection/: annotate_person.py  converter.ps1
project/annotations/ml_backend/: .dockerignore  _wsgi.py  test_api.py
project/annotations/pipelines/: pipeline.py
project/annotations/pose/: annotate_pose.py  coco2label_studio.py  config-halpe.xml  config-wholebody.xml  config.xml  labelstudio2coco.py  rtmpose.py  sapiens.py
project/benchmarks/: README.md  accuracy.py  comparison.py  eval-config.yaml  overlay.py  pose_comparison_player.py
project/benchmarks/accuracy/: config.py  eval-config.yaml  eval-config_halpe26.yaml  eval-config_wholebody.yaml  evaluate.py  maps.py  patches.py  tools.py
project/gst_tools/: vid2imgs.sh  vid_unmerge.sh
project/hooks/: ddp_converter.py  minio_backend.py  model_registry.py  safe_mlflow.py  unfreeze_backbone_hook.py
project/hpo/: search_space.py  tune.py
project/hpo/patches/: rtmpose_halpe.py  vitpose.py
project/label_studio/: .env  README.md  ann_utils.py  annotate_person.py  annotate_pose.py  coco2label_studio.py  coco2wholebody.py  coco_split.py  launch-label-studio.ps1  minio_fetch_anns.py  palettes.py  tasks2json.py
project/label_studio/configs/: config-halpe.xml  config-wholebody.xml
project/label_studio/ml_backend/: .env.example  Dockerfile  docker-compose.yml  model.py  requirements.txt
project/label_studio/pipelines/: _mmpose.py  pipeline.py  sapiens2.py
project/labelstudio-stack/: .env  docker-compose.yaml
project/services/: .env  backups.sh  docker-compose.yaml
project/services/ml-backend/: _wsgi.py  model.py  requirements-base.txt  swagger-template.json  swagger-ui.html  utils.py
project/services/ml_backend/: .dockerignore  Dockerfile  logger.py  model.py  requirements.txt
project/visualizer/: README.md  __main__.py  constants.py  controller.py  drawing.py  models.py  services.py  style.py
project/visualizer/widgets/: __init__.py  grid_canvas.py  group_manager.py  group_panel.py  info_panel.py  player_bar.py  top_bar.py  view_group.py
project/visualizers/space/: README.md  __main__.py  constants.py  controller.py  drawing.py  services.py  style.py
project/visualizers/space/widgets/: grid_canvas.py  group_manager.py  group_panel.py  info_panel.py  player_bar.py  top_bar.py  view_group.py
project/visualizers/surface/: config.py  eval-config.yaml  overlay.py  pose_comparison_player.py
requirements/: mminstall.txt
tools/: .env  dist_train.sh  launch_mlflow.sh  simple_train.sh  train.py
