[project]
name = "PoseTrainer"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "setuptools",
    "numpy<2",
    "ultralytics==8.3.206",
    "opencv-python~=4.9.0.80",
    "nuitka",
    "torch==2.8.*",
    "kornia",
    "onnx==1.16.0",
    "onnxruntime-gpu==1.20.1",
    "mlflow==2.22.*",
    "tensorrt==10.9.0.34",
    "dvc==3.67.1",
    "dvc-s3==3.3.0",
    "tenacity",
    "openpyxl",
]

[dependency-groups]
graphics = [
    "pycairo",
]
ray = [
    "ray[tune]",
    "ray[default]",
    "optuna",
]
labeling = [
    "label-studio-sdk==2.0.*",
    "label-studio-converter==0.0.59",
    "label-studio==1.21.0",
]
mmlab = [
    "albumentations==1.3.1",
    "sapiens @ git+https://github.com/facebookresearch/sapiens2.git",
    "chumpy @ git+https://github.com/mattloper/chumpy.git@4228d703b622e172e843438fe0fada102979361a",
    "mmpretrain==1.2.0",
    "mmdeploy==1.3.1",
    "mmdet>=3.0.0,<3.3.0",
    "openmim"
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128"},
]
torchaudio = [
  { index = "pytorch-cu128"},
]
